<resources>
    <string name="app_name">AcuPrint</string>
    <string name="esc_title">ESC Test</string>
    <string name="bill_title">Print Receipt</string>
    <string name="label_title">Print Label</string>
    <string name="read_title">Read Info</string>
    <string name="bluetooth_title">Bluetooth Printer</string>
    <string name="esc">ESC Test</string>
    <string name="label">Label</string>
    <string name="bill">Receipt</string>
    <string name="read_info">Setting</string>
    <string name="test_Title">Bluetooth Test</string>
    <string name="title_activity_settings">Settings</string>
    <string name="jxit_printer">Acural Printer</string>
    <string name="barcode1dtest">Barcode Test</string>
    <string name="select_barcode1d_param">Choose Barcode：</string>
    <string name="barcode_type">Barcode Type:</string>
    <string name="barcode_width">Unit Width:</string>
    <string name="barcode_height">Barocde Height:</string>
    <string name="barcode1d_scope">Rank（0~255）</string>
    <string name="HRI_position">HRI Postion：</string>
    <string name="HRI_font">HRI Font：</string>
    <string name="input_barcode1d_content">Barcode Content：</string>
    <string name="barcode1d_default_text">123456789012</string>
    <string name="send_print">Print</string>
    <string name="restore_defaults">Default Setting</string>
    <string name="num_fifty">50</string>
    <string name="barcode2d_default_content">123456789012</string>
    <string name="error_correction_level">2</string>
    <string name="firmware_version_number">3</string>
    <string name="barcode2d_test">QR Barocde Test</string>
    <string name="graphical_version_number">Version:</string>
    <string name="amplification_factor">Englarge:</string>
    <string name="barcode2d_type">Type:</string>
    <string name="tv_error_correction_level">Error:</string>
    <string name="error_correction_level_scope">Rank（0-4）</string>
    <string name="graphical_version_number_scope">Rank（0~20）</string>
    <string name="input_barcode2d_content">Content:</string>
    <string name="select_barcode2d_param">Choose Barcode:</string>
    <string name="graphic_test">Pic Test</string>
    <string name="open_camera">Open Camera</string>
    <string name="select_photo">Choose Picture</string>
    <string name="refresh">Refresh</string>
    <string name="update">Update</string>
    <string name="off_line_mode">Offline</string>
    <string name="clockwise_rotation">Rotate：</string>
    <string name="enderline">Underline</string>
    <string name="bold">Bold</string>
    <string name="typeface_type">Font：</string>
    <string name="multiple_word_wide">Width Enlarge:</string>
    <string name="word_high_expansion">Height Enlarge:</string>
    <string name="alignment">Align：</string>
    <string name="_1">1</string>
    <string name="one">1</string>
    <string name="print_text_test">Text Print Test</string>
    <string name="text_test">Text Test</string>
    <string name="input_text_content">Pls Add Text:</string>
    <string name="select_param">Pls Choose</string>
    <string name="black_white_reverse">Converse</string>
    <string name="roger">OK PROCEED</string>
    <string name="update_hint">Changan page can enter the setting change application mode and manually check the update</string>
    <string name="paired">Paired device</string>
    <string name="on_off">switch</string>
    <string name="scan_connect">Scan To Connect</string>
    <string name="search_device">Search Device</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="_0000">0000</string>
    <string name="serial_number">90011712010000</string>
    <string name="bt_name">M20</string>
    <string name="failed_num">Number of failures ：</string>
    <string name="tv_serial_number">serial number ：</string>
    <string name="start_testing">start testing</string>
    <string name="successful_num">Successful units：</string>
    <string name="test_completed_num">Number of test benches：</string>
    <string name="test_status">Test status ：</string>
    <string name="date_in_produced">Production Date：</string>
    <string name="accumulation">Accumulate</string>
    <string name="bt_pin">Bluetooth PIN：</string>
    <string name="bluetooth_name">Bluetooth name：</string>
    <string name="select_bluetooth_type">Select Bluetooth module：</string>
    <string name="read_device_info">parameter settings</string>
    <string name="jxit_usb_printer">USB Printer</string>
    <string name="btn_instruction_set_test">Instruction set test</string>
    <string name="company">Acural Solution Pvt. Ltd</string>
    <string name="address">H-141, 1st Floor, Sector 63, Noida, Uttar Pradesh - 201301</string>
    <string name="contact">Call us: +91-8745023300 write to us: support@acural.in</string>
</resources>
