<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rll_main"
    android:longClickable="true"
    android:background="@android:color/background_light">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/tb_main"
        app:navigationIcon="@drawable/usb1_32"
        android:background="@color/skin_tabbar_bg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:textColor="?attr/actionMenuTextColor"
            android:textSize="16sp"
            android:id="@+id/tv_tb_title"
            android:text="@string/jxit_printer" />

        <ImageButton
            android:id="@+id/btn_tb_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:background="@drawable/bluetooth_24"
            android:clickable="false"
            android:contentDescription=""
            android:textStyle="bold"
            tools:ignore="ContentDescription,RtlHardcoded,SpeakableTextPresentCheck" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/background_dark"
        android:layout_below="@+id/tb_main">

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/tb_main"
        android:layout_above="@+id/frameMenu">
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameMenu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/skin_tabbar_bg"
            android:orientation="horizontal"
            android:baselineAligned="false">



            <FrameLayout
                android:id="@+id/fl_esc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/image_esc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    app:srcCompat="@drawable/skin_tabbar_icon_at_select"
                    android:contentDescription=""
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/esc"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:id="@+id/tv_esc" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_bill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/image_bill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    app:srcCompat="@drawable/skin_tabbar_icon_space_select"
                    android:contentDescription=""
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/bill"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:id="@+id/tv_bill" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/image_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    app:srcCompat="@drawable/skin_tabbar_icon_space_select"
                    android:contentDescription=""
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/label"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:id="@+id/tv_label" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/fl_read_info">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/skin_tabbar_icon_at_select"
                    android:id="@+id/image_read_info"
                    android:layout_gravity="top|center"
                    android:contentDescription=""
                    tools:ignore="ContentDescription" />

                <TextView
                    android:text="@string/read_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_device_identification"
                    android:layout_gravity="bottom|center"
                    android:textSize="12sp"
                    android:textColor="@android:color/black" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/black" >
        </LinearLayout>
    </FrameLayout>


</RelativeLayout>